fix: visible sidebar, new directory ToggleMenu

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -2,6 +2,7 @@
 
 .sidebar {
   position: relative;
+  z-index: 1000;
   padding: 1.25rem;
   background-color: var(--component-bg);
   transition: background-color 0.3s ease-in-out;
